# sta_bulletins

./: .gitignore  CLAUDE.md  INSTALL.md  NEW_FEATURES.md  PLAN_SPECIAL_SERVICES.md  TODO.md  generate.py  install.command  pyproject.toml
bulletin/: __init__.py  config.py  report.py  runner.py
bulletin/data/: hymnal_1982_first_lines.yaml  loader.py  placeholders.yaml  scripture_cache.json  staff.yaml
bulletin/document/: builder.py  formatting.py  funeral_builder.py  reading_sheet.py  styles.py  templates.py
bulletin/logic/: rules.py
bulletin/sources/: biblegateway.py  collects.py  funeral_data.py  google_sheet.py  music_11am.py  music_9am.py  (+4 more)
samples/: 2025-03-09 - Lent 1C - 9 am (HEII-A) - Bulletin.docx  2025-03-23 - Lent 3C - 9 am (HEII-A) - Bulletin.docx  2025-06-08 - Pentecost C - 9 am (HEII-A) - Bulletin.docx  2025-10-12 - Proper 23C - 9 am - Stewardship (HEII-B) - Bulletin.docx  2025-11-16 - Proper 28C - 9 am (HEII-C) - Bulletin.docx  2025-12-28 - Christmas 1A - 9 am (HEII-A) - Bulletin.docx
scripts/: build_hs_catalog.py
source_documents/: 2025-04-13 - Palm Sunday C - 9 am (HEII-A) - Bulletin.docx  2025-04-17 - Maundy Thursday (HEII-A) - Bulletin.docx  2025-04-18 - Good Friday - Bulletin.docx  Bulletin Formatted Song Lyrics - 11 am.docx  Bulletin Formatted Song Lyrics - 9 am.docx  Prayers of the People.docx
templates/: back_cover.docx  back_cover_funeral.docx  front_cover.docx  front_cover_funeral.docx  front_cover_good_friday.docx  front_cover_maundy_thursday.docx  front_cover_palm_sunday.docx  inside_back_cover_good_friday.docx  inside_back_cover_maundy_thursday.docx  senior_living_back_cover.docx  senior_living_front_cover.docx
tools/: analyze_bulletin.py  analyze_bulletins.py  analyze_docx.py  extract_collects.py  extract_psalms.py  extract_songs.py
web/: __init__.py  app.py  launcher.py  song_parser.py
(+47 files in other folders)
